--- a/todo.txt
+++ b/todo.txt
@@ -13,10 +13,12 @@
 ##
 #
 
-OK  change property PublicationIsTranscribed from boolean to literal
-OK  ADD Publication has to be digitized    oui/non/peut-etre    cardinality max 1  LIST
-OK  PublicationIsDigitized    oui / non     cardinality max 1   boolean
-OK  OriginalIsInCrlrArchive    from boolean to literal   +1 guiOrder
+
+books add possibility to specify pages
+clean numerise deux fois (DOVREBBE ESSERE OK)
+------->>>>>>> upload ontology and download new zip for import
+
+
 
 
 problemi con Salsah 1
