ontology little change: add possibility to specify pages for books; import books ok

--- a/bulkimport/transformation_scripts/import.ipynb
+++ b/bulkimport/transformation_scripts/import.ipynb
@@ -847,11 +847,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function TextIOWrapper.close>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "###\n",
     "### CREATE XML FROM CSV (BOOKS)\n",
@@ -873,6 +882,12 @@
     "f.close()\n",
     "\n",
     "\n",
+    "## SI [0] id, [1] type, [2] author, [3] title, [6] collaborateurs, [8] placepub, [9] namepub, \n",
+    "## SI [10] date, [11] pages, [12] comm interne, [13] Retranscrit, [15] digitized, [16] dans fonds CRLR  ##\n",
+    "## NO [4] title_pub, [5] illustré par, [7] numéro, [14] website interest  ##\n",
+    "\n",
+    "\n",
+    "\n",
     "###################################\n",
     "## WRITE DECLARATIONS AND BEGINNING OF THE XML FILE -adding more line breaks for readibility '+'\\n'+' ???-\n",
     "###################################\n",
@@ -880,7 +895,7 @@
     "\n",
     "\n",
     "\n",
-    "biblio_number_new = 1000  ## starting point for counting biblioid that should be added because are not in the original\n",
+    "biblio_number_new = 2000  ## starting point for counting biblioid that should be added because are not in the original\n",
     "    \n",
     "\n",
     "###################################\n",
@@ -923,18 +938,15 @@
     "    PublicationHasTitle = row[3]  \n",
     "    \n",
     "    \n",
-    "   ## -----------------------> publicationHasCollaborators\n",
+    "    ## -----------------------> publicationHasCollaborators\n",
     "    HasCollaborators = row[6]  \n",
     "    \n",
     "    \n",
-    "    ## -----------------------> IsInPeriodicalIssue\n",
-    "    IsInPeriodicalIssueVolume = row[7]\n",
-    "    if (',' in row[7]):\n",
-    "        IsInPeriodicalIssue_split = re.split(', ',row[7])\n",
-    "        IsInPeriodicalIssue = IsInPeriodicalIssue_split[0]\n",
-    "        IsInPeriodicalVolume = IsInPeriodicalIssue_split[1].replace('-', ' et ')\n",
-    "    else:\n",
-    "        IsInPeriodicalVolumeOnly = row[7].replace('-', ' et ')\n",
+    "    ## -----------------------> hasPublisher (PublisherTarget)\n",
+    "    publisherName = row[9]\n",
+    "    word_list = publisherName.replace(\"'\", ' ') ## replace accent with space\n",
+    "    word_list = word_list.replace(\",\", '').split()  ## replace comma with nothing and split words\n",
+    "    PublisherTarget = '_'.join(word_list)\n",
     "    \n",
     "    \n",
     "    ## -----------------------> publicationHasDate   \n",
@@ -964,8 +976,8 @@
     "            PublicationHasDate = 'GREGORIAN:'+Date+' CE'\n",
     "    \n",
     "    \n",
-    "    ## -----------------------> periodicalArticleIsInPages\n",
-    "    PeriodicalArticleIsInPages = row[11]  \n",
+    "    ## -----------------------> bookHasSpecificPages\n",
+    "    BookHasSpecificPages = row[11]  \n",
     "    \n",
     "    \n",
     "    ## -----------------------> publicationHasInternalComment\n",
@@ -979,9 +991,6 @@
     "    ## -----------------------> PublicationIsTranscribed\n",
     "    OriginalIsInCrlrArchive = row[16]\n",
     "  \n",
-    "    \n",
-    "    PeriodicalArticleLabelComplete = \"pub_\"+PublicationHasTitle+' ___ '+PeriodicalTarget+' ___ '+Date\n",
-    "    PeriodicalArticleLabel = re.sub(r\"\\(([^\\)]+)\\)\", \"\", PeriodicalArticleLabelComplete)\n",
     "    \n",
     "    ## -----------------------> publicationHasAuthor\n",
     "    ArticleAuthor = row[2]\n",
@@ -1010,12 +1019,12 @@
     "                    AuthorTargetSingle = row[2]\n",
     "                else:\n",
     "                    AuthorTarget = 'checkuno'\n",
-    "            \n",
-    "     ##  this creates list, while I want item\n",
-    "        ##AuthorTarget = [row[2] for row in csv_authors if ArticlesSurname in row[0] and ArticlesName in row[1]]\n",
-    "        \n",
-    "    \n",
-    "    \n",
+    "                    \n",
+    "                    \n",
+    "    ## -----------------------> label\n",
+    "    BookLabelComplete = \"pub_\"+ArticleAuthor+' ___ '+PublicationHasTitle+' ___ '+Date\n",
+    "    BookLabel = re.sub(r\"\\(([^\\)]+)\\)\", \"\", BookLabelComplete)\n",
+    "\n",
     "    \n",
     "                \n",
     "                \n",
@@ -1032,9 +1041,12 @@
     "    ###################################\n",
     "    ## DEFINE ELEMENTS WITH NS\n",
     "    ###################################\n",
-    "    PeriodicalArticleNS = ET.QName(NS_ROUD, \"PeriodicalArticle\")\n",
+    "    BookNS = ET.QName(NS_ROUD, \"Book\")\n",
     "    labelNS = ET.QName(NS_KNORAIMPORT, \"label\")\n",
+    "    bookHasSpecificPagesNS = ET.QName(NS_ROUD, \"bookHasSpecificPages\")\n",
     "    hasPublicationTypeNS = ET.QName(NS_ROUD, \"hasPublicationType\")\n",
+    "    hasPublisherNS = ET.QName(NS_ROUD, \"hasPublisher\")\n",
+    "    PublisherNS = ET.QName(NS_ROUD, \"Publisher\")\n",
     "    publicationHasAuthorNS = ET.QName(NS_ROUD, \"publicationHasAuthor\")\n",
     "    AuthorNS = ET.QName(NS_ROUD, \"Author\")\n",
     "    publicationHasTitleNS = ET.QName(NS_ROUD, \"publicationHasTitle\")\n",
@@ -1048,69 +1060,57 @@
     "    ###################################\n",
     "    ## CREATE ELEMENTS AND ATTRIBUTES (AS PREVIOUSLY DEFINED WITH NS) AND ASSIGN THEM CONTENT\n",
     "    ###################################\n",
-    "    PeriodicalArticle = ET.Element(PeriodicalArticleNS, attrib={'id':Publicationid}) \n",
     "    \n",
-    "    label = ET.SubElement(PeriodicalArticle, labelNS)\n",
-    "    label.text = PeriodicalArticleLabel\n",
+    "    Book = ET.Element(BookNS, attrib={'id':Publicationid}) \n",
+    "    \n",
+    "    label = ET.SubElement(Book, labelNS)\n",
+    "    label.text = BookLabel\n",
+    "    \n",
+    "    ## -----------------------------> bookHasSpecificPages\n",
+    "    if (BookHasSpecificPages!= ''):\n",
+    "        bookHasSpecificPages = ET.SubElement(Book, bookHasSpecificPagesNS, attrib={'knoraType':'richtext_value'})\n",
+    "        bookHasSpecificPages.text = BookHasSpecificPages\n",
     "    \n",
     "    \n",
     "    ## -----------------------------> hasCollaborators\n",
     "    if (HasCollaborators != ''):\n",
-    "        hasCollaborators = ET.SubElement(PeriodicalArticle, hasCollaboratorsNS, attrib={'knoraType':'richtext_value'})\n",
+    "        hasCollaborators = ET.SubElement(Book, hasCollaboratorsNS, attrib={'knoraType':'richtext_value'})\n",
     "        hasCollaborators.text = HasCollaborators\n",
     "    \n",
     "    \n",
     "    ## -----------------------------> hasPublicationType\n",
-    "    hasPublicationType = ET.SubElement(PeriodicalArticle, hasPublicationTypeNS, attrib={'knoraType':'hlist_value'})\n",
+    "    hasPublicationType = ET.SubElement(Book, hasPublicationTypeNS, attrib={'knoraType':'hlist_value'})\n",
     "    hasPublicationType.text = HasPublicationType  ## use variable defined with name of the publisher corresponding to second row\n",
     "    \n",
     "    \n",
-    "    ## -----------------------------> isInPeriodicalVolume  and  isInPeriodicalIssue\n",
-    "    if (IsInPeriodicalIssueVolume != '' and IsInPeriodicalVolumeOnly == ''):\n",
-    "        isInPeriodicalIssue = ET.SubElement(PeriodicalArticle, isInPeriodicalIssueNS, attrib={'knoraType':'richtext_value'})\n",
-    "        isInPeriodicalIssue.text = IsInPeriodicalIssue\n",
-    "        isInPeriodicalVolume = ET.SubElement(PeriodicalArticle, isInPeriodicalVolumeNS, attrib={'knoraType':'richtext_value'})\n",
-    "        isInPeriodicalVolume.text = IsInPeriodicalVolume\n",
-    "    else:   \n",
-    "        if (IsInPeriodicalIssueVolume != ''):\n",
-    "            isInPeriodicalVolume = ET.SubElement(PeriodicalArticle, isInPeriodicalVolumeNS, attrib={'knoraType':'richtext_value'})\n",
-    "            isInPeriodicalVolume.text = IsInPeriodicalVolumeOnly\n",
+    "    ## -----------------------------> hasPublisher\n",
+    "    if (publisherName != ''):\n",
+    "        hasPublisher = ET.SubElement(Book, hasPublisherNS)\n",
+    "        Publisher = ET.SubElement(hasPublisher, PublisherNS, attrib={'knoraType':'link_value', 'linkType':'ref', 'target':PublisherTarget})\n",
     "    \n",
-    "    \n",
-    "    ## -----------------------------> isPublishedInPeriodical\n",
-    "    isPublishedInPeriodical = ET.SubElement(PeriodicalArticle, isPublishedInPeriodicalNS)\n",
-    "    Periodical = ET.SubElement(isPublishedInPeriodical, PeriodicalNS, attrib={'knoraType':'link_value', 'linkType':'ref', 'target':PeriodicalTarget})\n",
     "    \n",
     "    \n",
     "    ## -----------------------------> OriginalIsInCrlrArchive\n",
     "    if (OriginalIsInCrlrArchive != ''):\n",
-    "        originalIsInCrlrArchive = ET.SubElement(PeriodicalArticle, originalIsInCrlrArchiveNS, attrib={'knoraType':'richtext_value'})\n",
+    "        originalIsInCrlrArchive = ET.SubElement(Book, originalIsInCrlrArchiveNS, attrib={'knoraType':'richtext_value'})\n",
     "        originalIsInCrlrArchive.text = OriginalIsInCrlrArchive\n",
     "        \n",
     "    \n",
-    "    ## -----------------------------> periodicalArticleIsInPages\n",
-    "    if (PeriodicalArticleIsInPages != ''):\n",
-    "        periodicalArticleIsInPages = ET.SubElement(PeriodicalArticle, periodicalArticleIsInPagesNS, attrib={'knoraType':'richtext_value'})\n",
-    "        periodicalArticleIsInPages.text = PeriodicalArticleIsInPages\n",
-    "        \n",
-    "    \n",
-    "    \n",
     "    ## -----------------------------> publicationHasAuthor\n",
-    "    \n",
     "    if (',') in ArticleAuthor:\n",
-    "        publicationHasAuthor = ET.SubElement(PeriodicalArticle, publicationHasAuthorNS)\n",
+    "        publicationHasAuthor = ET.SubElement(Book, publicationHasAuthorNS)\n",
     "        Author = ET.SubElement(publicationHasAuthor, AuthorNS, attrib={'knoraType':'link_value', 'linkType':'ref', 'target':AuthorTarget})\n",
-    "        publicationHasAuthor = ET.SubElement(PeriodicalArticle, publicationHasAuthorNS)\n",
+    "        publicationHasAuthor = ET.SubElement(Book, publicationHasAuthorNS)\n",
     "        Author = ET.SubElement(publicationHasAuthor, AuthorNS, attrib={'knoraType':'link_value', 'linkType':'ref', 'target':AuthorTargetSecond})\n",
     "    else:\n",
-    "        publicationHasAuthor = ET.SubElement(PeriodicalArticle, publicationHasAuthorNS)\n",
+    "        publicationHasAuthor = ET.SubElement(Book, publicationHasAuthorNS)\n",
     "        Author = ET.SubElement(publicationHasAuthor, AuthorNS, attrib={'knoraType':'link_value', 'linkType':'ref', 'target':AuthorTargetSingle})\n",
     "    \n",
     "    \n",
     "    \n",
     "    ## -----------------------------> publicationHasDate\n",
     "    if (Date != ''):\n",
-    "        publicationHasDate = ET.SubElement(PeriodicalArticle, publicationHasDateNS, attrib={'knoraType':'date_value'})\n",
+    "        publicationHasDate = ET.SubElement(Book, publicationHasDateNS, attrib={'knoraType':'date_value'})\n",
     "    \n",
     "    if ('(' in Date):\n",
     "        if len(Date1) > 7:\n",
@@ -1130,24 +1130,24 @@
     "    \n",
     "    ## -----------------------------> publicationHasInternalComment\n",
     "    if (PublicationHasInternalComment != ''):\n",
-    "        publicationHasInternalComment = ET.SubElement(PeriodicalArticle, publicationHasInternalCommentNS, attrib={'knoraType':'richtext_value'})\n",
+    "        publicationHasInternalComment = ET.SubElement(Book, publicationHasInternalCommentNS, attrib={'knoraType':'richtext_value'})\n",
     "        publicationHasInternalComment.text = PublicationHasInternalComment\n",
     "        \n",
     "    \n",
     "    ## -----------------------------> publicationHasTitle\n",
-    "    publicationHasTitle = ET.SubElement(PeriodicalArticle, publicationHasTitleNS, attrib={'knoraType':'richtext_value'})\n",
+    "    publicationHasTitle = ET.SubElement(Book, publicationHasTitleNS, attrib={'knoraType':'richtext_value'})\n",
     "    publicationHasTitle.text = PublicationHasTitle\n",
     "    \n",
     "    \n",
     "     ## -----------------------------> publicationIsTranscribed\n",
     "    if (PublicationIsTranscribed != ''):\n",
-    "        publicationIsTranscribed = ET.SubElement(PeriodicalArticle, publicationIsTranscribedNS, attrib={'knoraType':'richtext_value'})\n",
+    "        publicationIsTranscribed = ET.SubElement(Book, publicationIsTranscribedNS, attrib={'knoraType':'richtext_value'})\n",
     "        publicationIsTranscribed.text = PublicationIsTranscribed\n",
     "        \n",
     "        \n",
     "    \n",
     "    \n",
-    "    tree = ET.tostring(PeriodicalArticle, encoding=\"unicode\")\n",
+    "    tree = ET.tostring(Book, encoding=\"unicode\")\n",
     "    o.write('\\n''\\n'+ tree)\n",
     "\n",
     "## WRITE END OF THE XML FILE\n",
