working on fiches import

--- a/bulkimport/transformation_scripts/import.ipynb
+++ b/bulkimport/transformation_scripts/import.ipynb
@@ -1590,6 +1590,230 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<p>Stylo &agrave; bille, bleu Plume, noir Crayon, rouge Machine &agrave; &eacute;crire, rouge Premi&egrave;re lettre en rouge</p>\n"
+     ]
+    },
+    {
+     "ename": "ParseError",
+     "evalue": "undefined entity: line 1, column 9 (<string>)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/home/espadini/anaconda3/lib/python3.6/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m2862\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \u001b[1;32m\"<ipython-input-55-bf98e7654f8e>\"\u001b[0m, line \u001b[1;32m181\u001b[0m, in \u001b[1;35m<module>\u001b[0m\n    bla = ET.fromstring(hasOtherWritingTool_content)\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/home/espadini/anaconda3/lib/python3.6/xml/etree/ElementTree.py\"\u001b[0;36m, line \u001b[0;32m1314\u001b[0;36m, in \u001b[0;35mXML\u001b[0;36m\u001b[0m\n\u001b[0;31m    parser.feed(text)\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"<string>\"\u001b[0;36m, line \u001b[0;32munknown\u001b[0m\n\u001b[0;31mParseError\u001b[0m\u001b[0;31m:\u001b[0m undefined entity: line 1, column 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "###\n",
+    "### CREATE XML FROM CSV (FICHES)\n",
+    "###\n",
+    "\n",
+    "\n",
+    "\n",
+    "from xml.etree import ElementTree as ET\n",
+    "import csv, re\n",
+    "\n",
+    "f = open('../INPUT_data/fiches_DONT_TOUCH.csv')   ## should not be manipulated, because when changing the content of certain cells go to the next cell and the entire row is erroneous\n",
+    "o = open('../OUTPUT_xml/fiches.xml', 'w')\n",
+    "\n",
+    "csv_f = csv.reader(f)   \n",
+    "data = []\n",
+    "\n",
+    "for row in csv_f: \n",
+    "   data.append(row)\n",
+    "f.close()\n",
+    "\n",
+    "##print(data[0:2])\n",
+    "\n",
+    "\n",
+    "## [0] id, [1] titre, [2] archive_id, [3] oldcote, [4] cote, [5] ensemble_id, [6] type_id, [7] annotation, [8] support_id, \n",
+    "## [9] support_info, [10] instrument_id, [11] color_id, [12] other_tool, [13] statut_id, [14] dates, [15] datation, \n",
+    "## [16] datationlist_id, [17] datationcomment, [18] publie, [19] biblio_id, [20] auteurtraduit_id, [21]alreadydigitized, \n",
+    "## [22] numerise_info, [23] commentaire, [24] photocopy, [25] resp_id\n",
+    "\n",
+    "\n",
+    "###################################\n",
+    "## WRITE DECLARATIONS AND BEGINNING OF THE XML FILE -adding more line breaks for readibility '+'\\n'+' ???-\n",
+    "###################################\n",
+    "o.write('<?xml version=\"1.0\" encoding=\"UTF-8\"?>'+'\\n'+'<knoraXmlImport:resources xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://api.knora.org/ontology/knoraXmlImport/v1# ../p0112-roud-oeuvres-xml-schemas/p0112-roud-oeuvres.xsd\" xmlns=\"http://api.knora.org/ontology/0112/roud-oeuvres/xml-import/v1#\" xmlns:knoraXmlImport=\"http://api.knora.org/ontology/knoraXmlImport/v1#\" xmlns:p0112-roud-oeuvres=\"http://api.knora.org/ontology/0112/roud-oeuvres/xml-import/v1#\">'+'\\n')\n",
+    "\n",
+    "\n",
+    "\n",
+    "###################################\n",
+    "#### REGISTERING NAMESPACES\n",
+    "###################################\n",
+    "NS_ROUD = \"http://api.knora.org/ontology/0112/roud-oeuvres/xml-import/v1#\" \n",
+    "NS_KNORAIMPORT = \"http://api.knora.org/ontology/knoraXmlImport/v1#\"\n",
+    "NS_KNORARICHTEXT = \"http://example.com\"\n",
+    "ET.register_namespace(\"p0112-roud-oeuvres\", NS_ROUD)\n",
+    "ET.register_namespace(\"knoraXmlImport\", NS_KNORAIMPORT)\n",
+    "ET.register_namespace(\"\", NS_KNORATEXT)\n",
+    "\n",
+    "\n",
+    "###################################\n",
+    "## DEFINE ELEMENTS WITH NS\n",
+    "###################################\n",
+    "ManuscriptNS = ET.QName(NS_ROUD, \"Manuscript\")\n",
+    "labelNS = ET.QName(NS_KNORAIMPORT, \"label\")\n",
+    "hasAnnotationNS = ET.QName(NS_ROUD, \"hasAnnotation\")\n",
+    "hasDocumentTypeNS = ET.QName(NS_ROUD, \"hasDocumentType\")\n",
+    "hasGeneticStageNS = ET.QName(NS_ROUD, \"hasGeneticStage\")\n",
+    "hasOtherWritingToolNS = ET.QName(NS_ROUD, \"hasOtherWritingTool\")\n",
+    "richtextNS = ET.QName(NS_KNORARICHTEXT, \"text\")\n",
+    "hasPublicCommentNS = ET.QName(NS_ROUD, \"hasPublicComment\")\n",
+    "hasSupportInfoNS = ET.QName(NS_ROUD, \"hasSupportInfo\")\n",
+    "hasSupportTypeNS = ET.QName(NS_ROUD, \"hasSupportType\")\n",
+    "hasTranslatedAuthorNS = ET.QName(NS_ROUD, \"hasTranslatedAuthor\")\n",
+    "AuthorNS = ET.QName(NS_ROUD, \"Author\")\n",
+    "hasWritingColorNS = ET.QName(NS_ROUD, \"hasWritingColor\")\n",
+    "hasWritingToolNS = ET.QName(NS_ROUD, \"hasWritingTool\")\n",
+    "isPhotocopyNS = ET.QName(NS_ROUD, \"isPhotocopy\")\n",
+    "manuscriptHasDateNS = ET.QName(NS_ROUD, \"manuscriptHasDate\")\n",
+    "manuscriptHasDateEstablishedComputableNS = ET.QName(NS_ROUD, \"manuscriptHasDateEstablishedComputable\")\n",
+    "manuscriptHasDateEstablishedReadableNS = ET.QName(NS_ROUD, \"manuscriptHasDateEstablishedReadable\")\n",
+    "manuscriptHasEditorialSetNS = ET.QName(NS_ROUD, \"manuscriptHasEditorialSet\")\n",
+    "manuscriptHasInternalCommentNS = ET.QName(NS_ROUD, \"manuscriptHasInternalComment\")\n",
+    "manuscriptHasOldShelfmarkNS = ET.QName(NS_ROUD, \"manuscriptHasOldShelfmark\")\n",
+    "manuscriptHasPublishedReferenceNS = ET.QName(NS_ROUD, \"manuscriptHasPublishedReference\")\n",
+    "PublisherNS = ET.QName(NS_ROUD, \"Publisher\")\n",
+    "manuscriptHasShelfmarkNS = ET.QName(NS_ROUD, \"manuscriptHasShelfmark\")\n",
+    "manuscriptHasTitleNS = ET.QName(NS_ROUD, \"manuscriptHasTitle\")\n",
+    "manuscriptIsDigitizedNS = ET.QName(NS_ROUD, \"manuscriptIsDigitized\")\n",
+    "manuscriptIsInArchiveNS = ET.QName(NS_ROUD, \"manuscriptIsInArchive\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "###################################\n",
+    "## PREPARE CONTENT OF ELEMENTS AND ATTRIBUTES\n",
+    "###################################\n",
+    "for row in data[6:7]:\n",
+    "    \n",
+    "    \n",
+    "    ## -----------------------> @id + label\n",
+    "    ficheid = 'fiche'+row[0] \n",
+    "    ficheLabel = ficheid\n",
+    "    \n",
+    "    \n",
+    "    ## -----------------------> hasAnnotation\n",
+    "    if (row[7] == 'oui'):\n",
+    "        hasAnnotation_content = 'true'\n",
+    "    else:\n",
+    "        hasAnnotation_content = 'false'    \n",
+    "    \n",
+    "    \n",
+    "    ## -----------------------> hasDocumentType\n",
+    "    documentType = row[6]\n",
+    "    if (documentType == '1'):\n",
+    "        hasDocumentType_content = 'http://rdfh.ch/lists/0112/roud-oeuvres-flatlist-hasDocumentType-manuscript'\n",
+    "    if (documentType == '2'):\n",
+    "        hasDocumentType_content = 'http://rdfh.ch/lists/0112/roud-oeuvres-flatlist-hasDocumentType-dactylo'\n",
+    "    if (documentType == '3'):\n",
+    "        hasDocumentType_content = 'http://rdfh.ch/lists/0112/roud-oeuvres-flatlist-hasDocumentType-imprime'\n",
+    "    \n",
+    "    \n",
+    "    ## -----------------------> hasGeneticStage\n",
+    "    geneticStage = row[13]\n",
+    "    if (geneticStage == '1'):\n",
+    "        hasGeneticStage_content = 'http://rdfh.ch/lists/0112/roud-oeuvres-flatlist-hasGeneticStage-note'\n",
+    "    if (geneticStage == '2'):\n",
+    "        hasGeneticStage_content = 'http://rdfh.ch/lists/0112/roud-oeuvres-flatlist-hasGeneticStage-plan'\n",
+    "    if (geneticStage == '3'):\n",
+    "        hasGeneticStage_content = 'http://rdfh.ch/lists/0112/roud-oeuvres-flatlist-hasGeneticStage-brouillon'\n",
+    "    if (geneticStage == '4'):\n",
+    "        hasGeneticStage_content = 'http://rdfh.ch/lists/0112/roud-oeuvres-flatlist-hasGeneticStage-miseAuNet'\n",
+    "    if (geneticStage == '5'):\n",
+    "        hasGeneticStage_content = 'http://rdfh.ch/lists/0112/roud-oeuvres-flatlist-hasGeneticStage-manuscritDefinitif'\n",
+    "    if (geneticStage == '6'):\n",
+    "        hasGeneticStage_content = 'http://rdfh.ch/lists/0112/roud-oeuvres-flatlist-hasGeneticStage-epreuvesCorriges'\n",
+    "    if (geneticStage == '7'):\n",
+    "        hasGeneticStage_content = 'http://rdfh.ch/lists/0112/roud-oeuvres-flatlist-hasGeneticStage-originalCorrige'\n",
+    "    if (geneticStage == '8'):\n",
+    "        hasGeneticStage_content = 'http://rdfh.ch/lists/0112/roud-oeuvres-flatlist-hasGeneticStage-verifier'\n",
+    "    if (geneticStage == '10'):\n",
+    "        hasGeneticStage_content = 'http://rdfh.ch/lists/0112/roud-oeuvres-flatlist-hasGeneticStage-liste'\n",
+    "    if (geneticStage == '11'):\n",
+    "        hasGeneticStage_content = 'NULL'\n",
+    "     \n",
+    "    \n",
+    "    ## -----------------------> hasOtherWritingTool\n",
+    "    otherWritingTool = row[12]\n",
+    "    if (otherWritingTool != ''):\n",
+    "        hasOtherWritingTool_content = otherWritingTool\n",
+    "        print(hasOtherWritingTool_content)\n",
+    "                \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    ## LABEL DA AGGIUSTARE !!\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    ###################################\n",
+    "    ## CREATE ELEMENTS AND ATTRIBUTES (AS PREVIOUSLY DEFINED WITH NS) AND ASSIGN THEM CONTENT\n",
+    "    ###################################\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    Manuscript = ET.Element(ManuscriptNS, attrib={'id':ficheid}) \n",
+    "    \n",
+    "    label = ET.SubElement(Manuscript, labelNS)\n",
+    "    label.text = ficheLabel\n",
+    "    \n",
+    "    \n",
+    "    ## -----------------------------> hasAnnotation\n",
+    "    hasAnnotation = ET.SubElement(Manuscript, hasAnnotationNS, attrib={'knoraType':'boolean_value'})\n",
+    "    hasAnnotation.text = hasAnnotation_content\n",
+    "    \n",
+    "    \n",
+    "    ## -----------------------------> hasDocumentType\n",
+    "    hasDocumentType = ET.SubElement(Manuscript, hasDocumentTypeNS, attrib={'knoraType':'hlist_value'})\n",
+    "    hasDocumentType.text = hasDocumentType_content\n",
+    "    \n",
+    "    \n",
+    "    ## -----------------------------> hasGeneticStage\n",
+    "    if (hasGeneticStage_content == 'NULL'):\n",
+    "        pass\n",
+    "    else:\n",
+    "        hasGeneticStage = ET.SubElement(Manuscript, hasGeneticStageNS, attrib={'knoraType':'hlist_value'})\n",
+    "        hasGeneticStage.text = hasGeneticStage_content\n",
+    "        \n",
+    "        \n",
+    "    ## -----------------------------> hasOtherWritingTool\n",
+    "    if (otherWritingTool != ''):\n",
+    "        hasOtherWritingTool = ET.SubElement(Manuscript, hasOtherWritingToolNS, attrib={'knoraType':'richtext_value', 'mapping_id':'http://rdfh.ch/standoff/mappings/StandardMapping'})\n",
+    "        richtext = ET.SubElement(hasOtherWritingTool, richtextNS, attrib={'xmlns':''})\n",
+    "        bla = ET.fromstring(hasOtherWritingTool_content)\n",
+    "        print(bla)\n",
+    "        richtext.append(bla)\n",
+    "    \n",
+    "   \n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "    tree = ET.tostring(Manuscript, encoding=\"unicode\")\n",
+    "    o.write('\\n''\\n'+ tree)\n",
+    "\n",
+    "## WRITE END OF THE XML FILE\n",
+    "with o:  ## this is to append the text, if just write o.write does not work here (why??)\n",
+    "    o.write('\\n'+'</knoraXmlImport:resources>')\n",
+    "\n",
+    "o.close"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
    "outputs": [
